--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" type="image/png" href="icon.png">
     <title>Lazarew</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             background-color: #111111;
             color: #e0e0e0;
             margin: 0;
@@ -153,6 +154,7 @@
             const progressBar = document.querySelector('.progress');
             progressBar.style.width = value + '%';
         }
+        console.log("Creator: Lazarev\nDiscord: _lazarev\nTelegram: @Lazarrew");
     </script>
 </body>
 </html>
