--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="particles-js"></div>
     <div class="container">
         <img src="images/icon.png" alt="Фото профиля" class="profile-pic">
-        <h1>Lazarew (aka Vaniley)</h1>
-        <p>Опытный программист с страстью к созданию инновационных решений. Специализируюсь на разработке чат-ботов (Telegram, Discord и другие).</p>
+        <h1>Lazarrew (aka Vaniley)</h1>
+        <p>Кодер пишущий для души и свободы (opensource)</p>
         <h2>Мои навыки:</h2>
         <div class="skills">
             <div class="skill" onmouseover="showProgress(this, 90)">Python</div>
@@ -23,7 +23,7 @@
             <div class="skill" onmouseover="showProgress(this, 20)">Golang</div>
         </div>
         <div class="progress-bar"><div class="progress"></div></div>
-        <div class="projects">
+        <!-- <div class="projects">
             <h2>Проекты:</h2>
             <div class="project">
                 <h3>Умный помощник</h3>
@@ -33,7 +33,7 @@
                 <h3>Сайт с AI инструментами</h3>
                 <p>Доступ к разным нейросетям (closed)</p>
             </div>
-        </div>
+        </div> -->
             <!-- Ваш существующий контент -->
             <div class="social-icons">
                 <a href="https://t.me/Lazarrew" target="_blank">
