--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="skill" onmouseover="showProgress(this, 65)">JavaScript</div>
             <div class="skill" onmouseover="showProgress(this, 23)">Rust</div>
             <div class="skill" onmouseover="showProgress(this, 20)">Golang</div>
+            <div class="skill" onmouseover="showProgress(this, 25)">Java</div>
         </div>
         <div class="progress-bar"><div class="progress"></div></div>
         <!-- <div class="projects">
